--- a/view/my-body.html
+++ b/view/my-body.html
@@ -1,13 +1,15 @@
 <div class="container bg-secondary bg-gradient rounded" style="--bs-bg-opacity: .4; border-style: dashed;">
     <div id="products" class="row gy-2 py-4 my-2 overflow-auto" style="height: 250px;">
-        <div class="col-md-12 text-center"><h2>Invoice header</h2></div>
-        <my-product-details></my-product-details>
+        <div class="col-md-12 text-center"><h2>Invoice Product</h2></div>
+        <my-products></my-products>
+        
+
     </div>
 </div>
 <div class="container g-0">
     <div class="row row-cols-sm-3 mt-3">
         <div>
-            <button type="button" class="btn w-100 btn-lg btn-outline-info">Send</button>
+            <button type="button" id="send" class="btn w-100 btn-lg btn-outline-info">Send</button>
         </div>
         <div>
             <button type="button" class="btn w-100 btn-lg btn-outline-secondary">Details</button>
