--- a/view/my-header.html
+++ b/view/my-header.html
@@ -1,38 +1,37 @@
 <div class="container bg-secondary bg-gradient rounded" style="--bs-bg-opacity: .4; border-style: dashed;">
     <div class="row cols-1 cols-sm-2 gy-2 py-4">
-        <div class="col-md-12 text-center"><h2>Invoice header</h2></div>
+        <div class="col-sm-12 text-center"><h2>Invoice Header</h2></div>
         <div class="col-md-4">
-            <label for="N_Bill" class="form-label">N de bill</label>
-            <input type="number" class="form-control" name="N_Bill" id="N_Bill" placeholder="Type the bill's number">
+            <label for="N_Invoice" class="form-label">Invoice Number</label>
+            <input type="number" class="form-control" name="N_Invoice" placeholder="write the Invoice number">
         </div>
         <div class="col-md-4">
-            <label for="Bill_Date" class="form-label">Bill Date</label>
-            <input type="date" class="form-control" name="Bill_Date" id="Bill_Date">
+            <label for="Invoice_Date" class="form-label">Invoice Date</label>
+            <input type="date" class="form-control" name="Invoice_Dat" placeholder="write the date of the Invoice">
         </div>
         <div class="col-md-4">
             <label for="Seller" class="form-label">Seller</label>
-            <input type="text" class="form-control" name="Seller" id="Seller" placeholder="Type the seller's name">
-        </div>
-
-        <div class="col-md-4">
-            <label for="Identification" class="form-label">Customer identification</label>
-            <input type="number" class="form-control" name="Identification" id="Identification" placeholder="Type the customer's ID">
+            <input type="text" class="form-control" name="Seller" placeholder="write the seller's name">
         </div>
         <div class="col-md-4">
-            <label for="Full_Name" class="form-label">Full name</label>
-            <input type="text" class="form-control" name="Full_Name" id="Full_Name" placeholder="Type the full name">
+            <label for="Identification" class="form-label">customer ID number</label>
+            <input type="number" class="form-control" name="Identification" placeholder="write the customer identification number">
+        </div>
+        <div class="col-md-4">
+            <label for="Full_Name" class="form-label">Full Name</label>
+            <input type="text" class="form-control" name="Full_Name" placeholder="write the full name">
         </div>
         <div class="col-md-4">
             <label for="Email" class="form-label">Email</label>
-            <input type="email" class="form-control" name="Email" id="Email" placeholder="Type the email">
+            <input type="email" class="form-control" name="Email" placeholder="write the e-mail">
         </div>
         <div class="col-md">
             <label for="Address" class="form-label">Address</label>
-            <input type="text" class="form-control" name="Address" id="Address" placeholder="Type the address">
+            <input type="text" class="form-control" name="Address" placeholder="write the address">
         </div>
         <div class="col-md">
             <label for="Phone" class="form-label">Phone</label>
-            <input type="tel" class="form-control" name="Phone" id="Phone" placeholder="Type the phone">
+            <input type="tel" class="form-control" name="Phone" placeholder="write the phone">
         </div>
     </div>
 </div>
